--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -94,7 +94,7 @@
     font-size: 150px;
     font-weight: 500;
     font-family: "Ogg";
-    margin-bottom: -100px;
+    margin-bottom: -150px;
     letter-spacing: -2px;
     text-align: center;
 }
@@ -179,4 +179,64 @@
     transition: color 0.8s cubic-bezier(0.16, 1, 0.3, 1);
     transition: background-color 1s cubic-bezier(16, 1, 0.3, 1);
     transition: border 0.8s cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+.skill-set-box:hover {
+    color: #161616;
+    background-color: #f0f0f0;
+    border: 1px solid #161616;
+}
+
+.skill-set-box h1,
+.skill-set-box p {
+    margin: 0px 30px;
+    font-family: "Inter";
+    font-weight: lighter;
+    text-transform: uppercase;
+}
+
+.skill-set-box h1 {
+    margin-top: 35px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.skill-set-box p {
+    margin-top: 20px;
+    font-size: 13px;
+}
+
+.project-and-work {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    flex-direction: column;
+    height: 30vh;
+    padding-bottom: 100px;
+    border-bottom: 1px dashed black;
+}
+
+.project-and-work h1 .h1-project {
+    text-decoration: none;
+    color: black;
+    font-size: 100px;
+    font-weight: lighter;
+    font-family: "Ogg";
+    text-decoration: 0.5px line-through;
+}
+
+.project-and-work p {
+    color: black;
+    font-size: 20px;
+    margin-top: -20px;
+    font-weight: lighter;
+    font-family: "Inter";
+}
+
+.h1-project img {
+    width: 90px;
 }
