--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -68,3 +68,58 @@ header {
     transform-origin: 100% 50%;
     transition: transfrom 0.3s cubic-bezier(0.2, 1, 0.3, 1), opacity 0.1s linear 0.2s;
 }
+
+@media (max-width: 1200px) {
+    .menu-items li,
+    .li {
+        font-size: 20px;
+    }
+
+    .li::before {
+        margin-top: 23px;
+    }
+}
+
+@media (max-width: 768px) {
+    .menu-items {
+        display: none;
+        background-color: #161616;
+        top: 80px;
+        right: 20px;
+        padding: 10px 0px;
+    }
+
+    .menu-items li,
+    .li {
+        color: #f0f0f0;
+        font-size: 15px;
+        padding-right: 10px;
+        padding-bottom: 2px;
+    }
+
+    .li::before {
+        background-color: #f0f0f0;
+    }
+
+    .toggle-menu {
+        display: block;
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        margin: 10px 0px;
+        padding: 0px 5px;
+        padding-top: 5px;
+        border-radius: 1px;
+        background-color: #161616;
+    }
+
+    .toggle-menu img {
+        width: 40px;
+        font-weight: lighter;
+        color: #f0f0f0;
+    }
+
+    header:hover .menu-items {
+        display: block;
+    }
+}
