--- a/src/GetInTouch/GetInTouch.css
+++ b/src/GetInTouch/GetInTouch.css
@@ -37,3 +37,24 @@
         transform: rotate(360deg);
     }
 }
+
+@media (max-width: 1300px) {
+    .get-in-touch h1 {
+        font-size: 70px;
+    }
+
+    .get-in-touch img {
+        width: 200px;
+        margin-top: -100px;
+        opacity: 0.1;
+    }
+
+    .get-in-touch p {
+        font-size: 10px;
+        font-weight: 400;
+        margin-left: 10px;
+        margin-right: 10px;
+        text-align: center;
+        font-family: "Inter";
+    }
+}
