--- a/src/GetInTouch/GetInTouch.css
+++ b/src/GetInTouch/GetInTouch.css
@@ -58,3 +58,22 @@
         font-family: "Inter";
     }
 }
+
+@media (max-width: 500px) {
+    .get-in-touch h1 {
+        font-size: 50px;
+    }
+
+    .get-in-touch p {
+        font-size: 10px;
+        font-weight: 500;
+    }
+
+    .get-in-touch img {
+        margin-top: -90px;
+    }
+
+    .get-in-touch {
+        height: 400px;
+    }
+}
