--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -144,3 +144,19 @@
         margin-right: 0px;
     }
 }
+
+@media (max-width: 400px) {
+    .footer {
+        height: 850px;
+    }
+
+    .left-footer-bottom {
+        margin-left: 0px;
+        font-size: 12px;
+    }
+
+    .right-footer-bottom p {
+        margin-right: 0px;
+        font-size: 12px;
+    }
+}
